# mixdyn

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  addban.f90  address.f90  blarge.f90  colmht.f90  contol.f90  decomp.f90  dintob.f90  flowpl.f90  functa.f90  functs.f90  gaussq.f90  geometry.mod  geomst.f90  gstiff.f90  impexp.f90  inputd.f90  intime.f90  invar.f90  itrate.f90  jacob2.f90  jacobd.f90  lingnl.f90  linkin.f90  loadpl.f90  lumass.f90  mixdyn.f90  model.f90  model.mod  modps.f90  module_geometric.f90  multpy.f90  name.mod  nodxyr.f90  outdyn.f90  param.inc  prevos.f90  redbak.f90  resepl.f90  sfr2.f90  (+1 more)
