add_executable(MIXDYN
               mixdyn.f90
               contol.f90
               inputd.f90
               nodxyr.f90
               gaussq.f90
               intime.f90
               prevos.f90
               loadpl.f90
               lumass.f90
               sfr2.f90
               jacob2.f90
               modps.f90
               linkin.f90
               colmht.f90
               address.f90
               addban.f90
               gstiff.f90
               jacobd.f90
               resepl.f90
               blarge.f90
               impexp.f90
               functa.f90
               itrate.f90
               outdyn.f90
               invar.f90
               yieldf.f90
               flowpl.f90
               dintob.f90
               geomst.f90
               lingnl.f90
               multpy.f90
               decomp.f90
               redbak.f90
               )
